authorize, print, rspecs
